Hit my Gemini 2.5 flash limit, changing to OpenAI model

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 
 # Gemini API Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
+
+# OpenAI API Configuration (if needed)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Website Authentication (Optional - only needed for sites requiring login)
+# The browser agent will automatically use these credentials when it encounters a login page
+SITE_USERNAME=your_username_here
+SITE_PASSWORD=your_password_here
