--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # OpenAI API Configuration (if needed)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Browser Model Selection
+# Options: "gemini" or "openai"
+# gemini = gemini-2.0-flash-exp
+# openai = gpt-4o
+BROWSER_MODEL=gemini
+
 # Website Authentication (Optional - only needed for sites requiring login)
 # The browser agent will automatically use these credentials when it encounters a login page
 SITE_USERNAME=your_username_here
